-update de la nav barre, si elle etait reduite sous les 991px elle doublait de hauteur, feck on perdait une partie de la page sous la navbar, jai fixer en retirant le nom d'usager dans navbar avec un css media query, et sous les 768px je retire l'icone d'usager dans le menu hamburger pour aligner les options

--- a/sachem/Content/Site.css
+++ b/sachem/Content/Site.css
@@ -187,3 +187,16 @@ video {
   }
 }
 /*fin barre de progres pour en attente de jumelage*/
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .nomUtilisateurNav{
+        display:none !important;
+    }
+}
+
+@media (max-width: 768px)
+{
+    .glyphicon-user{
+        display:none !important;
+    }
+}
